tests/compiletests/ui/lang/issue-452.stderr
error: function pointer types are not allowed
  --> <$DIR/issue-452.rs>:8:1
   |
LL | fn use_cmp(cmp: fn(&Position) -> u32) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: used by unnamed global (%44)
note: used from within `issue_452::main`
  --> <$DIR/issue-452.rs>:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: called by `main`
  --> <$DIR/issue-452.rs>:16:8
   |
LL | pub fn main() {
   |        ^^^^

error: aborting due to 1 previous error

